--- a/light.css
+++ b/light.css
@@ -8,18 +8,12 @@ body {
   margin-left: 225px;
   margin-right: 225px;
   text-align: center;
-  color: white;
   font-family: 'Georgia';
   font-size: 20px;
-  background-image: url("https://img.freepik.com/premium-photo/close-up-black-rose-with-gold-leaves-glitter-generative-ai_901242-34032.jpg?w=740");
-  background-size: 50% 100%;
   letter-spacing: 1px;
-}
-
-.light-mode {
   color: black;
-  background-image: url("https://as2.ftcdn.net/v2/jpg/05/74/86/45/1000_F_574864594_J1rwHeGNXZ5iaY4N33chv1Y47BVSfWN3.jpg");
-  background-size: 100% 100%;
+  background-image: url("https://img.freepik.com/premium-photo/white-gold-roses_81048-38542.jpg?w=740");
+  background-size: 50% 75%;
   background-position-x: -100px;
 }
 
@@ -27,14 +21,13 @@ button {
   border-radius: 20px;
   border-width: 2px;
   border-style: solid;
-  border-color: rebeccapurple;
+  border-color: #967bb6;
   font-family: "Georgia";
-  font-size: 15px;
-  width: 100px;
-  height: 25px;
+  font-size: 20px;
+  width: 200px;
+  height: 50px;
   background-color: #f9e4bc;
   color: black;
-  
 }
 
 button:hover {background-color: white}
@@ -43,6 +36,7 @@ button:active {
   background-color: white;
   box-shadow: 0 2.5px #333;
   transform: translateY(1px);
+}
 
 div.imgcontainer {
   position: relative;
@@ -61,8 +55,8 @@ div.textoverlay {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 30px;
-  color: white;
-  background-color: rgb(0,0,0,0.75);
+  color: black;
+  background-color: rgb(255,255,255,0.75);
 }
 
 p {
@@ -77,48 +71,48 @@ pre {
 }
 
 h2 {
-  color: rebeccapurple;
+  color: #967bb6;
   border-radius: 18px;
-  border-color: white;
+  border-color: #967bb6;
   border-style: solid;
   border-width: 2.5px;
   width: 75%;
   margin-left: 12.5%;
-  background-color: rgb(0,0,0,0.75);
+  background-color: rgb(255,255,255,0.75);
 }
 
 h1 {
-  outline: 5px groove rebeccapurple;
+  outline: 5px groove #967bb6;
 }
 
 
 a:link {
-  color: black
+  color: white;
 }
 
 a:visited {
-  color: black;
+  color: white;
 }
 
 a:hover {
-  color: darkblue;
+  color: cornflowerblue;
 }
 
 a:active {
-  color: darkblue;
+  color: cornflowerblue;
 }
 
 #notDisplayed {
-  color: black;
+  color: white;
 }
 
 div.transbox {
-  background-color: rgb(102,51,153,0.75);
+  background-color: rgb(150,123,182,0.75);
   border: 2.5px solid black;
 }
 
 div.transboxpre {
-  background-color: rgb(102,51,153,0.75);
+  background-color: rgb(150,123,182,0.75);
   border: 2.5px solid black;
   width: 75%;
   margin-left: 12.5%;
@@ -126,10 +120,11 @@ div.transboxpre {
 
 h3 {
   border-radius: 18px;
-  border-color: white;
+  border-color: #967bb6;
   border-style: solid;
   border-width: 2.5px;
   width: 50%;
   margin-left: 25%;
-  background-color: rgb(0,0,0,0.5);
+  background-color: rgb(255,255,255,0.75);
+  color: #967bb6;
 }
